multiples updates in server and client, Translator, Embeddings, Etc

--- a/llamaServer/.env.test
+++ b/llamaServer/.env.test
@@ -1,4 +1,4 @@
 HOST=localhost
 PORT=8765
-MODEL=llama-2-7b-chat.ggmlv3.q4_K_M.bin
-EXTRA_INFO={"max_tokens": 50, "temp": 0.9}
+LLM_MODEL=llama-2-7b-chat.ggmlv3.q4_K_M.bin
+EMBEDDER_MODEL='multi-qa-MiniLM-L6-cos-v1'
